# justdata

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  1071_Analysis_Tables_20251125_111308.xlsx  1071_Analysis_Tables_20251125_113547.xlsx  1071_Analysis_Tables_20251125_113607.xlsx  1071_Excel_Tables_Methodology.md  1071_table_sql.txt  API_TEST_INSTRUCTIONS.md  API_TEST_READY.md  APPLICATIONS_LIST.md  APPLICATIONS_REFERENCE.md  APPLICATION_URLS.md  ARCHITECTURE.md  AREA_ANALYSIS_FEATURES.md  BIGQUERY_QUERY_GUIDE.md  BRANCH_SWITCHING_GUIDE.md  CACHE_IMPLEMENTATION.md  CHECK_SERVERS_MANUAL.md  CLAUDE.md  CLAUDE_API_KEY_FOUND.md  CLAUDE_API_TEST_FIXED.md  CLAUDE_API_TEST_RESULTS.md  CLAUDE_API_TEST_SUMMARY.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_APPLICATION_ANALYSIS.md  CONFIG_FILE_ANALYSIS.md  CONTACTS_SEARCH_SUMMARY.md  CONTACT_ENRICHMENT_REVIEW.md  COUNTY_MAP_FIELD_DEFINITIONS.md  CREATE_DEPLOYMENT_PACKAGE.bat  CURSOR_AGENT_BACKUPS_WORK_SUMMARY.md  DASHBOARD_FILES_REVIEW.md  DATAEXPLORER_REVIEW.md  DATA_ENRICHMENT_COMPLETE_REVIEW.md  DATA_ENRICHMENT_STATUS.md  (+258 more)
.cursor/: DIAGNOSTIC_CHECKLIST.md
.cursor/rules/: tooling.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy-electwatch-job.yml  deploy-slack-bot.yml  update-version.yml
7_Bank_Branch_Quarterly_Trends/: analyze_report.py
api/: main.py
api/v1/: hubspot.py  router.py
apps/bizsight/: AGGRESSIVE_CACHE_FIX.md  BENCHMARK_FILES_LOCATION.md  BROWSER_CACHE_FIX.md  CACHE_FIX_SUMMARY.md  CHECK_SERVER_LOGS.md  DEPLOYMENT_PACKAGE.md  IMPORTANT_RUN_NEW_ANALYSIS.md  PACKAGING_INSTRUCTIONS.md  RECENT_CHANGES_SUMMARY.md  REPORT_IMPROVEMENTS_RECOMMENDATIONS.md  RESTORE_REPORT_BUILDER.md  ai_analysis.py  check_income_groups.py  check_national_benchmark.py  clear_cache.py  copy_logo.py  copy_logo_from_user.py  copy_static_files.py  create_deployment_package.py  create_package.bat  diagnose_report_data.py  excel_export.py  force_cache_clear.py  force_reload.py  generate_benchmarks.py  package_bizsight.py  report_builder.py  requirements.txt  setup_and_restart.py  test_imports.py  verify_and_backup_benchmarks.py  verify_code_loaded.py
apps/branchmapper/: app.py  version.py
apps/branchseeker/: CENSUS_TRACT_LAYERS_STRATEGY.md  CHANGELOG.json  GITHUB_ACTIONS_SETUP.md  MAP_TEST_README.md  QUICK_START_VERSION.md  README_VERSION.md  REVIEW_GITHUB_ACTIONS.md  SETUP_TASK_SCHEDULER.md  UX_REVIEW_AND_RECOMMENDATIONS.md  analysis.py  check_table_schema.py  data_utils.py  update_version.bat  update_version.py  update_version.sh
apps/data/: 04.json  05.json  06.json  08.json  09.json  10.json  11.json  16.json  17.json  18.json  20.json  23.json  24.json  25.json  26.json  28.json  29.json  30.json  32.json  35.json  36.json  37.json  38.json  41.json  46.json  51.json  55.json  56.json  72.json  benchmarks.json  national.json
apps/dataexplorer/: BRANCH_TABLE_SCHEMA.md  COMPARE_WITH_TABLEAU.md  DASHBOARD_PROPOSAL.md  QUERY_COMPARISON_GUIDE.md  README.md  acs_utils.py  app.py  area_analysis_processor.py  check_schemas_simple.py  check_table_schemas.py  data_utils.py  diagnose_hmda_structure.sql  excel_export.py  hud_data_processor.py  lender_analysis_processor.py  powerpoint_export.py  query_builders.py  test_branch_api.py  test_branch_query.py  test_census_api.py  verify_changes.py
apps/hubspot/: client.py  models.py  services.py  tracking.py
apps/lendsight/: MEMBER_REPORT_METHODOLOGY.md  __init__.py  app.py  census_utils.py  core.py  (+10 more)
audit/: deploy-artifact-status.md  standalone-app-status.md  structural-audit.md  test-baseline.md
bizsight_deployment_temp/: .env.example  DEPLOYMENT_GUIDE.md  README.md  install.bat  install.sh  run_bizsight.bat  run_bizsight.sh
branchmapper_deployment/: .env.example  README.md  install.bat  install.sh  run_branchmapper.bat  run_branchmapper.sh
branchseeker_deployment/: .env.example  README.md  install.bat  install.sh  run_branchseeker.bat  run_branchseeker.sh
cli/: __init__.py  main.py
cursor-tts-extension/: .gitignore  .vscodeignore  INSTALL.md  README.md  package.json
dataexplorer_deployment/: .env.example  README.md  install.bat  install.sh  run_dataexplorer.bat  run_dataexplorer.py  run_dataexplorer.sh
docs/: ADD_EXECUTIVE_USER_TYPE.md  BIGQUERY_QUERIES.md  CACHE_IMPLEMENTATION.md  HUBSPOT_DEVELOPER_PROJECTS.md  HUBSPOT_SETUP.md  ai-narrative-style-guide.md  candid-api-reference.md  index.html
justdata/: .gitignore  VERSIONING.md  hsproject.json
lendsight_deployment/: .env.example  HMDA_DATA_SCHEMA.md  README.md  install.bat  install.sh  run_lendsight.bat  run_lendsight.sh
merge_comparison/: MERGE_INVENTORY.md  jd_apps_py.txt  justdata_apps_py.txt
mergermeter-deployment-20251121-143956/: requirements.txt  run_mergermeter.py
scripts/: census_tileset_recipe.json  check_bigquery_access.py  create_cache_tables.sql  delete_cached_result.py  deploy-all.sh  deploy-cloudrun.sh  deploy-electwatch-job.sh  deploy-hubspot-sync-job.sh  deploy.sh  electwatch_refresh.bat  generate_census_tileset.py  setup_cache_tables.py  sync_cloudrun_bq_secrets.py
tests/: conftest.py  test_full_stack.py
(+2358 files in other folders)
