[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justdata"
version = "1.0.0"
description = "A comprehensive data analysis platform providing insights across banking, mortgage, and small business domains. Built with modern Python architecture and AI-powered analytics."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jad Edlebi", email = "jedlebi@ncrc.org"},
    {name = "Jason Richardson", email = "jrichardson@ncrc.org"}
]
maintainers = [
    {name = "Jad Edlebi", email = "jedlebi@ncrc.org"},
    {name = "Jason Richardson", email = "jrichardson@ncrc.org"}
]
keywords = ["data-analysis", "banking", "mortgage", "lending", "small-business", "ai", "bigquery", "claude", "gpt", "financial-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.20.0",
    
    # Database
    "google-cloud-bigquery>=3.13.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    
    # AI/ML
    "anthropic>=0.7.0",
    "openai>=1.3.0",
    "scikit-learn>=1.3.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "celery>=5.3.0",
    "structlog>=23.2.0",
    
    # HubSpot Integration
    "hubspot-api-client>=8.0.0",
    
    # Reporting
    "reportlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    
    # Web
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "ruff>=0.9.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
justdata = "justdata.cli.main:main"
justdata-api = "justdata.api.main:main"

[project.urls]
Homepage = "https://github.com/NCRC-org/justdata"
Documentation = "https://github.com/NCRC-org/justdata/blob/main/README.md"
Repository = "https://github.com/NCRC-org/justdata"
"Bug Tracker" = "https://github.com/NCRC-org/justdata/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["justdata*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.sql", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["justdata"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (fine in tests)
    "S104",   # binding to all interfaces (intentional for local dev)
    "S603",   # subprocess calls (needed for scripts)
    "S607",   # partial path for subprocess (needed for scripts)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"scripts/**/*.py" = ["S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["justdata"]
